--- a/css/style.css
+++ b/css/style.css
@@ -796,13 +796,14 @@ p{
   left: 0;
   top: 0;
 }
-.portfolio__item{
+.portfolio__item {
   position: relative;
   cursor: pointer;
   overflow: hidden;
   padding-bottom: 100%;
+  background: #eee;
 }
-.portfolio__item:hover::before{
+.portfolio__item:hover::before {
   border-radius: 0;
   width: 100%;
   height: 33%;
