--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html {
 :root{
   --body-font:'Raleway', sans-serif;
   --texts-font:'Montserrat', sans-serif;
+  --txt-color: #FFA908;
 }
 body {
   margin: 0;
@@ -28,7 +29,7 @@ body {
   background-color: #31373e;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #f1b50e;
+  background-color: var(--txt-color);
   border-radius: 0;
   background-image: -webkit-linear-gradient(
   0deg,rgba(255,255,255,.5) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.5) 50%,rgba(255,255,255,.5) 75%,transparent 75%,transparent);
@@ -125,7 +126,7 @@ p{
 
 .menu-btn{
   position: relative;
-  border: 1px solid rgb(247, 161, 3);
+  border: 1px solid var(--txt-color);
   background:none;
   display: none;
   cursor: pointer;
@@ -165,7 +166,7 @@ p{
   color: #fff;
 }
 .header__logo-link span{
-  color: #f1b50e;
+  color: var(--txt-color);
 }
 
 .nav__item:not(:last-child){
@@ -302,7 +303,7 @@ p{
 }
 
 .about-me__title span{
-  color:rgb(255, 169, 8);
+  color:var(--txt-color);
 }
 .about-me__cv {
   display: inline-block;
@@ -423,7 +424,7 @@ p{
 }
 .about__skill{
   padding: 10px;
-  background:  #e7b52b;
+  background:  var(--txt-color);
   border-radius: 10px;
   color: #fff;
   font-weight: bold;
@@ -500,7 +501,7 @@ p{
   position:absolute;
   width: 0;
   height: 100%;
-  background: rgb(241, 181, 14);
+  background: var(--txt-color);
   transition: all ease 1s;
   border-radius: 0 10px 10px 0;
 }
@@ -538,8 +539,8 @@ p{
   content: "";
   top: 0;
   left: 16px;
-  border-left:1.5px solid rgb(219, 166, 19);
-  border-top: 1.5px solid rgb(219, 166, 19);
+  border-left:1.5px solid var(--txt-color);
+  border-top: 1.5px solid var(--txt-color);
   position: absolute;
   height: 20px;
   width: 20px;
@@ -577,8 +578,8 @@ p{
   content: "";
   top: 0;
   right: 16px;
-  border-right:1.5px solid rgb(219, 166, 19);
-  border-top: 1.5px solid  rgb(219, 166, 19);
+  border-right:1.5px solid var(--txt-color);
+  border-top: 1.5px solid  var(--txt-color);
   position: absolute;
   height: 20px;
   width: 20px;
@@ -595,8 +596,8 @@ p{
   content: "";
   bottom: 0;
   left: 16px;
-  border-left:1.5px solid rgb(219, 166, 19);
-  border-bottom: 1.5px solid rgb(219, 166, 19);
+  border-left:1.5px solid var(--txt-color);
+  border-bottom: 1.5px solid var(--txt-color);
   position: absolute;
   height: 20px;
   width: 20px;
@@ -606,8 +607,8 @@ p{
   content: "";
   bottom: 0;
   right: 16px;
-  border-right:1.5px solid rgb(219, 166, 19);
-  border-bottom: 1.5px solid rgb(219, 166, 19);
+  border-right:1.5px solid var(--txt-color);
+  border-bottom: 1.5px solid var(--txt-color);
   position: absolute;
   height: 20px;
   width: 20px;
@@ -661,18 +662,18 @@ p{
   bottom: 0;
   left: 50%;
   transform: translate(-50%,0);
-  background: rgb(219, 166, 19);
+  background: var(--txt-color);
   transition: width 0.4s ease;
 }
 .offer-box__title::after{
   content: "";
   width: 0;
   height: 1px;
-  position:absolute;
-  top: 0;
+  position: absolute;
+  top: 0.1px;
   left: 50%;
   transform: translate(-50%,0);
-  background: rgb(219, 166, 19);
+  background: var(--txt-color);
   transition: width 0.4s ease;
 }
 .offer-box__desc {
@@ -713,7 +714,7 @@ p{
   width: 65px;
   height: 40px;
   font-size: 35px;
-  background: rgb(241, 181, 14);
+  background: var(--txt-color);
   border-radius: 10px;
   color: #fff;
   margin-bottom: 20px;
@@ -828,7 +829,7 @@ p{
   transform: translate(-50%,0);
   opacity: 0;
   z-index: 3;
-  color: rgb(241, 181, 14);
+  color: var(--txt-color);
   font-family: var(--texts-font);
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -850,12 +851,13 @@ p{
   z-index: 1;
   transition: all 0.4s ease;
 }
-.portfolio__links{
+.portfolio__links {
   position: absolute;
   width: 30%;
   background: transparent;
   z-index: 24;
   display: flex;
+  gap: 10px;
   align-items: flex-end;
   justify-content: space-between;
   left: 50%;
@@ -870,7 +872,7 @@ p{
   justify-content: center;
   width: 40px;
   height: 40px;
-  background: rgb(241, 181, 14);
+  background: var(--txt-color);
   color: #fff;
   font-size: 30px;
   border-radius: 10px;
