--- a/css/style.css
+++ b/css/style.css
@@ -889,7 +889,7 @@ p{
   .portfolio__list{
     grid-template-columns: repeat(3,auto);
   }
-  .projects {
+  .projects:not(:last-child) {
     margin-bottom: 50px;
   }
 }
@@ -897,7 +897,7 @@ p{
   .portfolio__list{
     grid-template-columns: repeat(2,auto);
   }
-  .projects {
+  .projects:not(:last-child) {
     margin-bottom: 80px;
   }
 }
@@ -929,12 +929,14 @@ p{
 }
 .contact__form {
   width: 100%;
-  height: 485px;
   display: flex;
   flex-direction: column;
   background: #000;
   padding: 50px;
   position: relative;
+}
+.contact__form > * {
+  margin-bottom: 20px;
 }
 .contact__form div{
   position: relative;
@@ -947,9 +949,6 @@ p{
   padding: 15px 15px 5px 15px;
   font-size: 1em;
   border-bottom: 1px solid gray;
-}
-.form__inputs:not(:last-child){
-  margin-bottom: 20px;
 }
 .form__inputs:hover .form__label{
   font-size: 10px;
@@ -1017,6 +1016,9 @@ p{
   margin-bottom: 30px;
   font-family: var(--texts-font);
 }
+.email {
+  margin-bottom: 0;
+}
 .contact__text-link::before{
   content: "";
   padding: 23px;
@@ -1054,9 +1056,6 @@ p{
   border-color: #000;
   color: #000;
 }
-.contact__text-link:not(:last-child) {
-  margin-bottom: 50px;
-}
 .contact__text-title{
   max-width: 100%;
   color: #000;
@@ -1083,6 +1082,9 @@ p{
   }
 }
 @media screen and (max-width:474px){
+  .contact__form {
+    padding: 30px;
+  }
   .contact__text-link{
     font-size: 14px;
   }
