some bugs changed

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
   min-height: 100vh;
   background-color: #fff;
   font-family: var(--body-font);
+  background: #000;
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -517,7 +518,7 @@ p{
 
 .my-offer {
   padding: 80px 0 80px 0;
-  background: rgba(0, 0, 0, 0.08);
+  background: rgba(255, 255, 255, 0.92);
 }
 .my-offer__title {
   text-transform: uppercase;
