--- a/css/style.css
+++ b/css/style.css
@@ -317,25 +317,25 @@ p{
 }
 .about-me__cv::before {
   position: absolute;
-  top: -1%;
-  left: -1%;
+  top: -1.1px;
+  left: -1px;
   width: 1px;
   height: 1px;
   display: block;
   content: '';
   border-radius: 50%;
-  background: #fff;
+  background: transparent;
   box-shadow: 0px 0px 10px 3px rgb(255 255 255);
   opacity: 1 !important;
   animation: shadow  15s infinite linear;
 }
 @keyframes shadow {
   0% {
-    left: -1%;
+    left: -1px;
   }
   39% {
     left: 100%;
-    top: -1%;
+    top: -1.1px;
   }
   51% {
     top: 100%;
@@ -343,10 +343,10 @@ p{
   }
   89% {
     top: 100%;
-    left: -1%;
+    left: -1px;
   }
   100% {
-    top: -1%;
+    top: -1.1px;
   }
 }
 .about-me__cv:hover {
